@@ -1,3 +1,11 @@
+2009-03-10  Rodney Dawes  <dobey@gnome.org>
+
+	* 48x48/actions/Makefile.am:
+	* 48x48/actions/appointment-new.png:
+	* 48x48/actions/mail-message-new.png:
+	* 48x48/actions/mail-send-receive.png:
+	Removed some duplicate icons that are old style
+
 2009-02-17  Rodney Dawes  <dobey@gnome.org>
 
 	* configure.in:
